--- a/Test.ipynb
+++ b/Test.ipynb
@@ -41,98 +41,97 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case 1. w/o data representation & LSTM model \n",
+    "# Case 1. LSTM model (w/o data representation)\n",
     "config1 = {\n",
     "        'model': 'LSTM', # classification에에 활용할 알고리즘 정의, {'LSTM', 'GRU', 'CNN_1D', 'LSTM_FCNs', 'FC_layer'} 중 택 1\n",
-    "        \"training\": True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
-    "        \"best_model_path\": './ckpt/lstm.pt',  # 학습 완료 모델 저장 경로\n",
+    "        'training': True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
+    "        'best_model_path': './ckpt/lstm.pt',  # 학습 완료 모델 저장 경로\n",
     "        'parameter': {\n",
-    "            'input_size': 9,\n",
-    "            'num_classes': 6,\n",
-    "            'num_layers' : 2, # recurrnet layers의 수, Default : 1\n",
-    "            'hidden_size' : 64, # hidden state의 벡터차원 수\n",
-    "            'dropout' : 0.1, # If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to dropout. Default: 0\n",
-    "            'bidirectional' : True, # 모델의 양방향성 여부\n",
-    "            'batch_size' : 64, #batch size\n",
-    "            'device': 'cuda', # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
-    "            'num_epochs' : 10, # 학습 시 사용할 epoch 수\n",
-    "            'lr': 0.0001\n",
-    "            }\n",
+    "            'input_size': 9,  # 데이터의 변수 개수, int\n",
+    "            'num_classes': 6,  # 분류할 class 개수, int\n",
+    "            'num_layers': 1,  # recurrent layers의 수, int(default: 1, 범위: 1 이상)\n",
+    "            'hidden_size': 64,  # hidden state의 차원, int(default: 64, 범위: 1 이상)\n",
+    "            'dropout': 0.1,  # dropout 확률, float(default: 0.1, 범위: 0 이상 1 이하)\n",
+    "            'bidirectional': True,  # 모델의 양방향성 여부, bool(default: True)\n",
+    "            'num_epochs': 100,  # 학습 epoch 횟수, int(default: 100, 범위: 1 이상)\n",
+    "            'batch_size': 512,  # batch 크기, int(default: 512, 범위: 1 이상, 컴퓨터 사양에 적합하게 설정)\n",
+    "            'lr': 0.0001,  # learning rate, float(default: 0.001, 범위: 0.1 이하)\n",
+    "            'device': 'cuda'  # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
+    "        }\n",
     "}\n",
     "\n",
-    "# Case 2. w/o data representation & GRU model \n",
+    "# Case 2. GRU model (w/o data representation)\n",
     "config2 = {\n",
     "        'model': 'GRU', # classification에에 활용할 알고리즘 정의, {'LSTM', 'GRU', 'CNN_1D', 'LSTM_FCNs', 'FC_layer'} 중 택 1\n",
-    "        \"training\": True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
-    "        \"best_model_path\": './ckpt/gru.pt',  # 학습 완료 모델 저장 경로\n",
+    "        'training': True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
+    "        'best_model_path': './ckpt/gru.pt',  # 학습 완료 모델 저장 경로\n",
     "        'parameter': {\n",
-    "            'input_size': 9,\n",
-    "            'num_classes': 6,\n",
-    "            'num_layers' : 2, # recurrnet layers의 수, Default : 1\n",
-    "            'hidden_size' : 64, # hidden state의 벡터차원 수\n",
-    "            'dropout' : 0.1, # If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to dropout. Default: 0\n",
-    "            'bidirectional' : True, # 모델의 양방향성 여부\n",
-    "            'batch_size' : 64, #batch size\n",
-    "            'device': 'cuda', # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
-    "            'num_epochs' : 10, # 학습 시 사용할 epoch 수\n",
-    "            'lr': 0.0001\n",
-    "            }\n",
+    "            'input_size': 9,  # 데이터의 변수 개수, int\n",
+    "            'num_classes': 6,  # 분류할 class 개수, int\n",
+    "            'num_layers': 1,  # recurrent layers의 수, int(default: 1, 범위: 1 이상)\n",
+    "            'hidden_size': 64,  # hidden state의 차원, int(default: 64, 범위: 1 이상)\n",
+    "            'dropout': 0.1,  # dropout 확률, float(default: 0.1, 범위: 0 이상 1 이하)\n",
+    "            'bidirectional': True,  # 모델의 양방향성 여부, bool(default: True)\n",
+    "            'num_epochs': 100,  # 학습 epoch 횟수, int(default: 100, 범위: 1 이상)\n",
+    "            'batch_size': 512,  # batch 크기, int(default: 512, 범위: 1 이상, 컴퓨터 사양에 적합하게 설정)\n",
+    "            'lr': 0.0001,  # learning rate, float(default: 0.001, 범위: 0.1 이하)\n",
+    "            'device': 'cuda'  # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
+    "        }\n",
     "}\n",
     "\n",
-    "# Case 3. w/o data representation & CNN_1D model \n",
+    "# Case 3. CNN_1D model (w/o data representation)\n",
     "config3 = {\n",
     "        'model': 'CNN_1D', # classification에에 활용할 알고리즘 정의, {'LSTM', 'GRU', 'CNN_1D', 'LSTM_FCNs', 'FC_layer'} 중 택 1\n",
-    "        \"training\": True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
-    "        \"best_model_path\": './ckpt/cnn_1d.pt',  # 학습 완료 모델 저장 경로\n",
+    "        'training': True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
+    "        'best_model_path': './ckpt/cnn_1d.pt',  # 학습 완료 모델 저장 경로\n",
     "        'parameter': {\n",
-    "            'input_size': 9,\n",
-    "            'num_classes': 6,\n",
-    "            'seq_len': 128,\n",
-    "            'output_channels' : 64, # convolution channel size of output\n",
-    "            'drop_out' : 0.1, # If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to dropout. Default: 0\n",
-    "            'kernel_size' : 3, # convolutional filter size\n",
-    "            'stride' : 1, # stride of the convolution. Default = 1 \n",
-    "            'padding' : 0, # padding added to both sides of the input. Default = 0\n",
-    "            'batch_size' : 64, # batch size\n",
-    "            'device': 'cuda', # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
-    "            'num_epochs' : 10, # 학습 시 사용할 epoch 수\n",
-    "            'lr': 0.0001\n",
-    "            }\n",
+    "            'input_size': 9,  # 데이터의 변수 개수, int\n",
+    "            'num_classes': 6,  # 분류할 class 개수, int\n",
+    "            'seq_len': 128,  # 데이터의 시간 길이, int\n",
+    "            'output_channels' : 64, # convolution layer의 output channel, int(default: 64, 범위: 1 이상, 2의 지수로 설정 권장)\n",
+    "            'kernel_size' : 3, # convolutional layer의 filter 크기, int(default: 3, 범위: 3 이상, 홀수로 설정 권장)\n",
+    "            'stride' : 1, # convolution layer의 stride 크기, int(default: 1, 범위: 1 이상)\n",
+    "            'padding' : 0, # padding 크기, int(default: 0, 범위: 0 이상)\n",
+    "            'drop_out' : 0.1, # dropout 확률, float(default: 0.1, 범위: 0 이상 1 이하)\n",
+    "            'num_epochs': 100,  # 학습 epoch 횟수, int(default: 100, 범위: 1 이상)\n",
+    "            'batch_size': 512,  # batch 크기, int(default: 512, 범위: 1 이상, 컴퓨터 사양에 적합하게 설정)\n",
+    "            'lr': 0.0001,  # learning rate, float(default: 0.0001, 범위: 0.1 이하)\n",
+    "            'device': 'cuda'  # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
+    "        }\n",
     "}\n",
     "\n",
-    "# Case 4. w/o data representation & LSTM_FCNs model \n",
+    "# Case 4. LSTM_FCNs model (w/o data representation)\n",
     "config4 = {\n",
     "        'model': 'LSTM_FCNs', # classification에에 활용할 알고리즘 정의, {'LSTM', 'GRU', 'CNN_1D', 'LSTM_FCNs', 'FC_layer'} 중 택 1\n",
-    "        \"training\": True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
-    "        \"best_model_path\": './ckpt/lstm_fcn.pt',  # 학습 완료 모델 저장 경로\n",
+    "        'training': True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
+    "        'best_model_path': './ckpt/lstm_fcn.pt',  # 학습 완료 모델 저장 경로\n",
     "        'parameter': {\n",
-    "            'input_size': 9,\n",
-    "            'num_classes': 6,\n",
-    "            'num_layers' : 1, # recurrnet layers의 수, Default : 1\n",
-    "            'lstm_drop_out' : 0.4, # If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to dropout. Default: 0\n",
-    "            'fc_drop_out' : 0.1, # If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to dropout. Default: 0\n",
-    "            'batch_size' : 256, # batch size\n",
-    "            'device': 'cuda', # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
-    "            'num_epochs' : 10, # 학습 시 사용할 epoch 수\n",
-    "            'lr': 0.0001\n",
-    "            }\n",
+    "            'input_size': 9,  # 데이터의 변수 개수, int\n",
+    "            'num_classes': 6,  # 분류할 class 개수, int\n",
+    "            'num_layers' : 1,  # recurrent layers의 수, int(default: 1, 범위: 1 이상)\n",
+    "            'lstm_drop_out' : 0.4, # LSTM dropout 확률, float(default: 0.4, 범위: 0 이상 1 이하)\n",
+    "            'fc_drop_out' : 0.1, # FC dropout 확률, float(default: 0.1, 범위: 0 이상 1 이하)\n",
+    "            'batch_size': 512,  # batch 크기, int(default: 512, 범위: 1 이상, 컴퓨터 사양에 적합하게 설정)\n",
+    "            'lr': 0.0001,  # learning rate, float(default: 0.0001, 범위: 0.1 이하)\n",
+    "            'device': 'cuda'  # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
+    "        }\n",
     "}\n",
     "\n",
-    "# Case 5. w data representation & fully-connected layers \n",
+    "# Case 5. fully-connected layers (w/ data representation)\n",
     "config5 = {\n",
     "        'model': 'FC', # classification에에 활용할 알고리즘 정의, {'RNN', 'LSTM', 'GRU', 'CNN_1D', 'FC'} 중 택 1\n",
     "        \"training\": True,  # 학습 여부, 저장된 학습 완료 모델 존재시 False로 설정\n",
     "        \"best_model_path\": './ckpt/gru.pt',  # 학습 완료 모델 저장 경로\n",
     "        'parameter': {\n",
-    "            'input_size': 64,\n",
-    "            'num_classes': 6,\n",
-    "            'drop_out' : 0.1, # If non-zero, introduces a Dropout layer on the outputs of each RNN layer except the last layer, with dropout probability equal to dropout. Default: 0\n",
-    "            'batch_size' : 64, # batch size\n",
-    "            'bias': True, # bias [True, False]\n",
-    "            'device': 'cuda', # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
-    "            'num_epochs' : 10, # 학습 시 사용할 epoch 수\n",
-    "            'lr': 0.0001\n",
-    "            }\n",
+    "            'input_size': 64,  # 데이터의 변수 개수(representation 차원), int\n",
+    "            'num_classes': 6,  # 분류할 class 개수, int\n",
+    "            'drop_out' : 0.1, # dropout 확률, float(default: 0.1, 범위: 0 이상 1 이하)\n",
+    "            'bias': True, # bias 사용 여부, bool(default: True)\n",
+    "            'num_epochs': 100, # 학습 epoch 횟수, int(default: 100, 범위: 1 이상)\n",
+    "            'batch_size': 512,  # batch 크기, int(default: 512, 범위: 1 이상, 컴퓨터 사양에 적합하게 설정)\n",
+    "            'lr': 0.0001,  # learning rate, float(default: 0.0001, 범위: 0.1 이하)\n",
+    "            'device': 'cuda'  # 학습 환경, [\"cuda\", \"cpu\"] 중 선택\n",
+    "        }\n",
     "}"
    ]
   },
@@ -165,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case 1. w/o data representation & LSTM\n",
+    "# Case 1. LSTM model (w/o data representation)\n",
     "config = config1\n",
     "data_cls = mc.Classification(config, train_data, test_data)\n",
     "model = data_cls.build_model()  # 모델 구축\n",
@@ -180,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eda6ed30",
+   "id": "f807a933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case 2. w/o data representation & GRU\n",
+    "# Case 2. GRU (w/o data representation)\n",
     "config = config2\n",
     "data_cls = mc.Classification(config, train_data, test_data)\n",
     "model = data_cls.build_model()  # 모델 구축\n",
@@ -209,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61df8b84",
+   "id": "1193c3f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case 3. w/o data representation & CNN_1D\n",
+    "# Case 3. CNN_1D (w/o data representation)\n",
     "config = config3\n",
     "data_cls = mc.Classification(config, train_data, test_data)\n",
     "model = data_cls.build_model()  # 모델 구축\n",
@@ -238,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed36aa29",
+   "id": "0d47759e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case 4. w/o data representation & LSTM_FCNs\n",
+    "# Case 4. LSTM_FCNs (w/o data representation)\n",
     "config = config4\n",
     "data_cls = mc.Classification(config, train_data, test_data)\n",
     "model = data_cls.build_model()  # 모델 구축\n",
@@ -267,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "155b9543",
+   "id": "c497f652",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Case 5. w/ data representation & fully-connected layers\n",
+    "# Case 5. fully-connected layers (w/ data representation)\n",
     "config = config5\n",
     "data_cls = mc.Classification(config, train_data, test_data)\n",
     "model = data_cls.build_model()  # 모델 구축\n",
@@ -327,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebfa54a1",
+   "id": "0b547daa",
    "metadata": {},
    "outputs": [],
    "source": [
